rendered/envs/alpha/vms/service-vms-victoria-metrics-single-server.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    a8r.io/repository: https://github.com/Zebradil/myks-homelab
  labels:
    app: server
    app.kubernetes.io/instance: vms
    app.kubernetes.io/name: victoria-metrics-single
  name: vms-victoria-metrics-single-server
  namespace: vms
spec:
  clusterIP: None
  ports:
    - name: http
      port: 8428
      protocol: TCP
      targetPort: http
  selector:
    app: server
    app.kubernetes.io/instance: vms
    app.kubernetes.io/name: victoria-metrics-single
  type: ClusterIP
