rendered/envs/alpha/vms/ingressroute-vms-lan.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  annotations:
    a8r.io/repository: https://github.com/Zebradil/myks-homelab
  name: vms-lan
spec:
  entryPoints:
    - lan-web
    - lan-websecure
  routes:
    - kind: Rule
      match: Host(`vms.lan.zebradil.dev`) || Host(`vms.gray.lan.zebradil.dev`) || Host(`vms.junior.lan.zebradil.dev`)
      services:
        - name: vms
          port: http
