rendered/envs/alpha/vms/ingressroute-vms-protected.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  annotations:
    a8r.io/repository: https://github.com/Zebradil/myks-homelab
  name: vms-protected
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - kind: Rule
      match: Host(`vms.zebradil.dev`) || Host(`vms.gray.zebradil.dev`) || Host(`vms.junior.zebradil.dev`)
      middlewares:
        - name: chain-authelia-auth
          namespace: authelia
      services:
        - name: vms-victoria-metrics-single-server
          port: http
